--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/dotenv-safe": "^8.1.2",
     "@types/sequelize": "^4.28.15",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "sequelize-typescript": "^2.1.5",
     "ts-node": "^10.9.1"
