--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.0",
     "express": "^4.18.2",
