--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/sequelize": "^4.28.15",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "jsonwebtoken": "^9.0.1",
     "sequelize-typescript": "^2.1.5",
     "ts-node": "^10.9.1"
   }
