--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
 PUERTO = 3000
-DBNAME = giovastore
+DBNAME = railway
 USER = root
-PASWORD = franklin
+PASWORD = GFfSASMcenLON4dZAHO7
+HOST = containers-us-west-163.railway.app
 DIALECT = mysql
-LOCAL = 3306
+LOCAL = 6490
 POINT = /api
 SECRET_KEY_JWT = JTFF_001FF
