--- a/.env
+++ b/.env
@@ -1,9 +1,10 @@
 PORT = 3000
-DBNAME = railway
+DBNAME = giovastore
 USER = root
-PASWORD = GFfSASMcenLON4dZAHO7
-HOST = containers-us-west-163.railway.app
+PASWORD = franklin
+HOST = localhost
 DIALECT = mysql
-LOCAL = 6490
+LOCAL = 3306
 POINT = /api
 SECRET_KEY_JWT = JTFF_001FF
+VALIDATION_HEADER = Validation
