--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "tsc": "tsc",
-    "start":"node dist/app.js",
+    "start": "node dist/app.js",
     "dev": "nodemon ./src/app.ts"
   },
   "keywords": [],
@@ -26,11 +26,15 @@
     "@types/dotenv": "^8.2.0",
     "@types/dotenv-safe": "^8.1.2",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/luxon": "^3.3.1",
     "@types/sequelize": "^4.28.15",
+    "@types/uuid": "^9.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.1",
+    "luxon": "^3.3.0",
     "sequelize-typescript": "^2.1.5",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "uuid": "^9.0.0"
   }
 }
