--- a/.env
+++ b/.env
@@ -8,3 +8,12 @@ LOCAL = 3306
 POINT = /api
 SECRET_KEY_JWT = JTFF_001FF
 VALIDATION_HEADER = Validation
+
+DBNAME=railway
+DIALECT=mysql
+LOCAL=6490
+PASWORD=GFfSASMcenLON4dZAHO7
+POINT=/api
+PORT=3000
+SECRET_KEY_JWT=JTFF_001FF
+USER=root
