--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
     "@types/dotenv-safe": "^8.1.2",
@@ -29,6 +30,7 @@
     "@types/luxon": "^3.3.1",
     "@types/sequelize": "^4.28.15",
     "@types/uuid": "^9.0.2",
+    "axios": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.1",
